change add/edit hostel form and added functinality of upload images

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "latest",
+    "browser-image-compression": "^2.0.2",
     "child_process": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
