--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "latest",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -63,7 +63,7 @@
     "next-auth": "latest",
     "next-themes": "^0.4.6",
     "nodemailer": "latest",
-    "prisma": "latest",
+    "prisma": "^6.6.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
