--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-google-maps/api": "^2.20.6",
+    "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/google.maps": "^3.58.1",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "latest",
     "browser-image-compression": "^2.0.2",
     "child_process": "latest",
@@ -73,6 +75,8 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "uuidv4": "^6.2.13",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
