added user profile page with working api and also created page of change password, added image upload to cloudinary functionality

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-table": "^8.21.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/google.maps": "^3.58.1",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
@@ -54,6 +55,7 @@
     "browser-image-compression": "^2.0.2",
     "child_process": "latest",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
@@ -70,6 +72,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
